Fixes disconcerting jump with bootstrap collapse elements (MH-25)
It appears that the content that has padding must be wrapped in another
div in order for the bootstrap js code to account for the padding of the
content.

--- a/myhpom/static/myhpom/page/_faq.scss
+++ b/myhpom/static/myhpom/page/_faq.scss
@@ -112,6 +112,7 @@
   color: $brand-orange;
   font-size: 20px;
   margin-right: 2rem;
+  padding-left: 0.5rem;
 }
 
 [data-toggle="collapse"].collapsed + .faq-entry__header__collapser::after {
@@ -120,6 +121,7 @@
   color: $brand-orange;
   font-size: 20px;
   margin-right: 2rem;
+  padding-left: 0.5rem;
 }
 
 .faq-entry__body {
